// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`in a closed sale renders bid when an auction is about to open, but not closed or finished 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={undefined}
  testID={undefined}
>
  <AROpaqueImageView
    aspectRatio={0.74}
    imageURL="artsy.net/image-url"
    style={
      Object {
        "marginBottom": 10,
      }
    }
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Array [
          Object {
            "color": "#666666",
            "fontSize": 12,
          },
          Object {
            "fontWeight": "bold",
          },
        ],
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Mikael Olson
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 12,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Array [
            Object {
              "color": "#666666",
              "fontSize": 12,
            },
            Object {
              "fontStyle": "italic",
            },
          ],
          Object {
            "fontFamily": "AGaramondPro-Regular",
          },
        ]
      }
    >
      Some Kind of Dinosaur
    </Text>
    , 2015
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 12,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Gallery 1261
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../images/paddle.png",
        }
      }
      style={
        Object {
          "marginRight": 4,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Object {
            "color": "#666666",
            "fontSize": 12,
          },
          Object {
            "fontFamily": "AGaramondPro-Regular",
          },
        ]
      }
    >
      $200 (1 bid)
    </Text>
  </View>
</View>
`;

exports[`in a closed sale renders without any price information 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={undefined}
  testID={undefined}
>
  <AROpaqueImageView
    aspectRatio={0.74}
    imageURL="artsy.net/image-url"
    style={
      Object {
        "marginBottom": 10,
      }
    }
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Array [
          Object {
            "color": "#666666",
            "fontSize": 12,
          },
          Object {
            "fontWeight": "bold",
          },
        ],
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Mikael Olson
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 12,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Array [
            Object {
              "color": "#666666",
              "fontSize": 12,
            },
            Object {
              "fontStyle": "italic",
            },
          ],
          Object {
            "fontFamily": "AGaramondPro-Regular",
          },
        ]
      }
    >
      Some Kind of Dinosaur
    </Text>
    , 2015
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 12,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Gallery 1261
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 12,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Auction Closed
  </Text>
</View>
`;

exports[`in an open sale renders with current bid 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={undefined}
  testID={undefined}
>
  <AROpaqueImageView
    aspectRatio={0.74}
    imageURL="artsy.net/image-url"
    style={
      Object {
        "marginBottom": 10,
      }
    }
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Array [
          Object {
            "color": "#666666",
            "fontSize": 12,
          },
          Object {
            "fontWeight": "bold",
          },
        ],
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Mikael Olson
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 12,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Array [
            Object {
              "color": "#666666",
              "fontSize": 12,
            },
            Object {
              "fontStyle": "italic",
            },
          ],
          Object {
            "fontFamily": "AGaramondPro-Regular",
          },
        ]
      }
    >
      Some Kind of Dinosaur
    </Text>
    , 2015
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 12,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Gallery 1261
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../images/paddle.png",
        }
      }
      style={
        Object {
          "marginRight": 4,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Object {
            "color": "#666666",
            "fontSize": 12,
          },
          Object {
            "fontFamily": "AGaramondPro-Regular",
          },
        ]
      }
    >
      $200 (1 bid)
    </Text>
  </View>
</View>
`;

exports[`in an open sale renders with starting bid 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={undefined}
  testID={undefined}
>
  <AROpaqueImageView
    aspectRatio={0.74}
    imageURL="artsy.net/image-url"
    style={
      Object {
        "marginBottom": 10,
      }
    }
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Array [
          Object {
            "color": "#666666",
            "fontSize": 12,
          },
          Object {
            "fontWeight": "bold",
          },
        ],
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Mikael Olson
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 12,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Array [
            Object {
              "color": "#666666",
              "fontSize": 12,
            },
            Object {
              "fontStyle": "italic",
            },
          ],
          Object {
            "fontFamily": "AGaramondPro-Regular",
          },
        ]
      }
    >
      Some Kind of Dinosaur
    </Text>
    , 2015
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 12,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Gallery 1261
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../images/paddle.png",
        }
      }
      style={
        Object {
          "marginRight": 4,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Object {
            "color": "#666666",
            "fontSize": 12,
          },
          Object {
            "fontFamily": "AGaramondPro-Regular",
          },
        ]
      }
    >
      $100
    </Text>
  </View>
</View>
`;

exports[`renders properly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={undefined}
  testID={undefined}
>
  <AROpaqueImageView
    aspectRatio={0.74}
    imageURL="artsy.net/image-url"
    style={
      Object {
        "marginBottom": 10,
      }
    }
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Array [
          Object {
            "color": "#666666",
            "fontSize": 12,
          },
          Object {
            "fontWeight": "bold",
          },
        ],
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Mikael Olson
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 12,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Array [
            Object {
              "color": "#666666",
              "fontSize": 12,
            },
            Object {
              "fontStyle": "italic",
            },
          ],
          Object {
            "fontFamily": "AGaramondPro-Regular",
          },
        ]
      }
    >
      Some Kind of Dinosaur
    </Text>
    , 2015
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 12,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Gallery 1261
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 12,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Contact Gallery
  </Text>
</View>
`;
